--- a/104-1.yaml
+++ b/104-1.yaml
@@ -59,7 +59,16 @@ proxy-groups:
     type: select
     proxies:
       - WARP        #套warp之后的节点 
-      - mysocks5    #自建节点的名称      
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心）    #自建节点的名称      
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 2
+      - 🇺🇸 美国
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 3
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 4
+      - 🇦🇺 澳大利亚
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 5
+      - 🇺🇸 美国 2
+      - 🇳🇱 荷兰
+      - 🇦🇺 澳大利亚 2   
       - 机场负载均衡  #机场节点的负载均衡，下同
       - 机场自动选择    
       - 机场手动选择
