Update and rename 104.yaml to 104-1.yaml

--- a/104-1.yaml
+++ b/104-1.yaml
@@ -42,9 +42,9 @@ proxy-groups:
   - name: 前置节点
     type: select
     proxies:  
-      - 机场负载均衡  #机场节点的负载均衡，下同
-      - 机场自动选择    
-      - 机场手动选择
+      - 负载均衡  #机场节点的负载均衡，下同
+      - 自动选择    
+      - 手动选择
   - name: 节点选择
     type: select
     proxies:
