--- a/104.yaml
+++ b/104.yaml
@@ -38,13 +38,6 @@ proxies:
     dialer-proxy: "前置节点"
 
 proxy-groups:
-  # 这个名字为前置节点的策略组可以选择是用自建节点还是机场节点作为前置节点
-  - name: 前置节点
-    type: select
-    proxies:  
-      - 负载均衡  #机场节点的负载均衡，下同
-      - 自动选择    
-      - 手动选择
   - name: 节点选择
     type: select
     proxies:
@@ -52,6 +45,7 @@ proxy-groups:
       - 负载均衡  #机场节点的负载均衡，下同
       - 自动选择    
       - 手动选择
+      - DIRECT
   - name: 负载均衡
     type: load-balance #负载均衡
     proxies:
