--- a/104.yaml
+++ b/104.yaml
@@ -1,28 +1,34 @@
-proxy-providers:
-  jichang-dingyue1:   #名称，默认即可
-    type: http
-    url: "your-jichangdingyue-url"  ###此处必填，url里面填入你的机场订阅链接，一般订阅链接加密了，需要转换为直链(https://acl4ssr-sub.github.io/)
-    interval: 3600
-    path: ./jichang1.yaml   #机场订阅文件下载后的文件名及文件地址，默认即可
-    health-check:
-      enable: true
-      interval: 600
-      url: https://www.gstatic.com/generate_204
+port: 7890
+socks-port: 7891
+allow-lan: true
+mode: Rule
+log-level: info
+external-controller: :9090
+dns:
+  enabled: true
+  nameserver:
+    - 119.29.29.29
+    - 223.5.5.5
+  fallback:
+    - 8.8.8.8
+    - 8.8.4.4
+    - tls://1.0.0.1:853
+    - tls://dns.google:853
 
 proxies:
 ###你的自建节点都在 proxies 里添加，这里我帖的一个socks5默认配置
 #你可以替换为你自建的trojan vmess vless tuic等，格式参考官网：https://clash-meta.wiki/config/proxies/vless/
-  - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心）, server: 132.145.81.116, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心） 2, server: 132.145.81.224, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇺🇸 美国, server: 131.186.20.197, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心） 3, server: 140.238.23.30, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心） 4, server: 132.145.89.90, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
   - {name: 🇦🇺 澳大利亚, server: 129.154.215.81, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心） 5, server: 132.145.92.8, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇺🇸 美国 2, server: 138.2.72.233, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇳🇱 荷兰, server: 132.226.169.90, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云）, server: 47.245.9.57, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心）, server: 132.145.95.84, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心） 2, server: 132.145.90.210, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
   - {name: 🇦🇺 澳大利亚 2, server: 129.154.192.165, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-
+  - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心） 3, server: 132.145.90.150, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 2, server: 47.245.40.161, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本, server: 146.56.180.83, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本 2, server: 146.56.170.190, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇨🇳 中国（阿里云）, server: 8.217.14.88, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  
   - name: WARP
     type: wireguard
     server: engage.cloudflareclient.com
@@ -49,16 +55,16 @@ proxy-groups:
   - name: 负载均衡
     type: load-balance #负载均衡
     proxies:
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心）
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心） 2
-     - 🇺🇸 美国
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心） 3
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心） 4
-     - 🇦🇺 澳大利亚
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心） 5
-     - 🇺🇸 美国 2
-     - 🇳🇱 荷兰
-     - 🇦🇺 澳大利亚 2
+      - 🇦🇺 澳大利亚
+      - 🇯🇵 日本（东京阿里云）
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心）
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 2
+      - 🇦🇺 澳大利亚 2
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 3
+      - 🇯🇵 日本（东京阿里云） 2
+      - 🇯🇵 日本
+      - 🇯🇵 日本 2
+      - 🇨🇳 中国（阿里云）
     url: 'http://www.gstatic.com/generate_204'
     interval: 300
     #lazy: true
@@ -68,16 +74,16 @@ proxy-groups:
   - name: 自动选择
     type: url-test #选出延迟最低的机场节点
     proxies:
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心）
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心） 2
-     - 🇺🇸 美国
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心） 3
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心） 4
-     - 🇦🇺 澳大利亚
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心） 5
-     - 🇺🇸 美国 2
-     - 🇳🇱 荷兰
-     - 🇦🇺 澳大利亚 2
+      - 🇦🇺 澳大利亚
+      - 🇯🇵 日本（东京阿里云）
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心）
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 2
+      - 🇦🇺 澳大利亚 2
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 3
+      - 🇯🇵 日本（东京阿里云） 2
+      - 🇯🇵 日本
+      - 🇯🇵 日本 2
+      - 🇨🇳 中国（阿里云）
     url: "http://www.gstatic.com/generate_204"
     interval: 300
     tolerance: 50
@@ -85,16 +91,16 @@ proxy-groups:
   - name: 手动选择
     type: select #手动选择
     proxies:
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心）
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心） 2
-     - 🇺🇸 美国
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心） 3
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心） 4
-     - 🇦🇺 澳大利亚
-     - 🇰🇷 韩国（首尔Oracle云计算数据中心） 5
-     - 🇺🇸 美国 2
-     - 🇳🇱 荷兰
-     - 🇦🇺 澳大利亚 2
+      - 🇦🇺 澳大利亚
+      - 🇯🇵 日本（东京阿里云）
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心）
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 2
+      - 🇦🇺 澳大利亚 2
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 3
+      - 🇯🇵 日本（东京阿里云） 2
+      - 🇯🇵 日本
+      - 🇯🇵 日本 2
+      - 🇨🇳 中国（阿里云）
 
 rules:
     # 国内简单分流
