--- a/104.yaml
+++ b/104.yaml
@@ -40,15 +40,16 @@ proxies:
     reserved: [0,0,0]
     remote-dns-resolve: true  
     dns: [ 1.1.1.1, 8.8.8.8 ]
-    dialer-proxy: "前置节点"
+    dialer-proxy: "节点选择"
 
 proxy-groups:
-  - name: 前置节点
+  - name: 节点选择
     type: select
     proxies:  
       - 负载均衡  #机场节点的负载均衡，下同
       - 自动选择    
       - 手动选择
+      - WARP
       - DIRECT
   - name: 负载均衡
     type: load-balance #负载均衡
