--- a/104.yaml
+++ b/104.yaml
@@ -17,16 +17,16 @@ dns:
 proxies:
 ###你的自建节点都在 proxies 里添加，这里我帖的一个socks5默认配置
 #你可以替换为你自建的trojan vmess vless tuic等，格式参考官网：https://clash-meta.wiki/config/proxies/vless/
-  - {name: 🇦🇺 澳大利亚, server: 129.154.215.81, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇯🇵 日本（东京阿里云）, server: 47.245.9.57, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心）, server: 132.145.95.84, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心） 2, server: 132.145.90.210, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇦🇺 澳大利亚 2, server: 129.154.192.165, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心） 3, server: 132.145.90.150, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇯🇵 日本（东京阿里云） 2, server: 47.245.40.161, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇯🇵 日本, server: 146.56.180.83, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇯🇵 日本 2, server: 146.56.170.190, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇨🇳 中国（阿里云）, server: 8.217.14.88, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇦🇺 澳大利亚, server: 129.154.192.165, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云）, server: 47.74.10.41, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 2, server: 47.74.14.156, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 3, server: 47.74.41.136, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 4, server: 47.74.19.240, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 5, server: 47.74.22.48, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 6, server: 47.74.11.9, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心）, server: 132.145.94.162, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 7, server: 47.74.37.50, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本, server: 146.56.141.103, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
   
   - name: WARP
     type: wireguard
@@ -56,14 +56,14 @@ proxy-groups:
     proxies:
       - 🇦🇺 澳大利亚
       - 🇯🇵 日本（东京阿里云）
-      - 🇰🇷 韩国（首尔Oracle云计算数据中心）
-      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 2
-      - 🇦🇺 澳大利亚 2
-      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 3
       - 🇯🇵 日本（东京阿里云） 2
+      - 🇯🇵 日本（东京阿里云） 3
+      - 🇯🇵 日本（东京阿里云） 4
+      - 🇯🇵 日本（东京阿里云） 5
+      - 🇯🇵 日本（东京阿里云） 6
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心）
+      - 🇯🇵 日本（东京阿里云） 7
       - 🇯🇵 日本
-      - 🇯🇵 日本 2
-      - 🇨🇳 中国（阿里云）
     url: 'http://www.gstatic.com/generate_204'
     interval: 300
     #lazy: true
@@ -75,14 +75,14 @@ proxy-groups:
     proxies:
       - 🇦🇺 澳大利亚
       - 🇯🇵 日本（东京阿里云）
-      - 🇰🇷 韩国（首尔Oracle云计算数据中心）
-      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 2
-      - 🇦🇺 澳大利亚 2
-      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 3
       - 🇯🇵 日本（东京阿里云） 2
+      - 🇯🇵 日本（东京阿里云） 3
+      - 🇯🇵 日本（东京阿里云） 4
+      - 🇯🇵 日本（东京阿里云） 5
+      - 🇯🇵 日本（东京阿里云） 6
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心）
+      - 🇯🇵 日本（东京阿里云） 7
       - 🇯🇵 日本
-      - 🇯🇵 日本 2
-      - 🇨🇳 中国（阿里云）
     url: "http://www.gstatic.com/generate_204"
     interval: 300
     tolerance: 50
@@ -92,14 +92,14 @@ proxy-groups:
     proxies:
       - 🇦🇺 澳大利亚
       - 🇯🇵 日本（东京阿里云）
-      - 🇰🇷 韩国（首尔Oracle云计算数据中心）
-      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 2
-      - 🇦🇺 澳大利亚 2
-      - 🇰🇷 韩国（首尔Oracle云计算数据中心） 3
       - 🇯🇵 日本（东京阿里云） 2
+      - 🇯🇵 日本（东京阿里云） 3
+      - 🇯🇵 日本（东京阿里云） 4
+      - 🇯🇵 日本（东京阿里云） 5
+      - 🇯🇵 日本（东京阿里云） 6
+      - 🇰🇷 韩国（首尔Oracle云计算数据中心）
+      - 🇯🇵 日本（东京阿里云） 7
       - 🇯🇵 日本
-      - 🇯🇵 日本 2
-      - 🇨🇳 中国（阿里云）
 
 rules:
     # 国内简单分流
