--- a/104.yaml
+++ b/104.yaml
@@ -17,16 +17,16 @@ dns:
 proxies:
 ###你的自建节点都在 proxies 里添加，这里我帖的一个socks5默认配置
 #你可以替换为你自建的trojan vmess vless tuic等，格式参考官网：https://clash-meta.wiki/config/proxies/vless/
-  - {name: 🇦🇺 澳大利亚, server: 129.154.192.165, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇯🇵 日本（东京阿里云）, server: 47.74.10.41, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇯🇵 日本（东京阿里云） 2, server: 47.74.14.156, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇯🇵 日本（东京阿里云） 3, server: 47.74.41.136, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇯🇵 日本（东京阿里云） 4, server: 47.74.19.240, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇯🇵 日本（东京阿里云） 5, server: 47.74.22.48, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇯🇵 日本（东京阿里云） 6, server: 47.74.11.9, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云）, server: 47.74.11.9, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 2, server: 47.74.13.239, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 3, server: 47.74.34.162, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇦🇺 澳大利亚, server: 129.154.199.36, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 4, server: 47.74.10.41, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 5, server: 47.74.0.183, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇨🇳 中国（阿里云）, server: 8.212.46.180, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 6, server: 47.74.13.94, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
   - {name: 🇰🇷 韩国（首尔Oracle云计算数据中心）, server: 132.145.94.162, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇯🇵 日本（东京阿里云） 7, server: 47.74.37.50, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
-  - {name: 🇯🇵 日本, server: 146.56.141.103, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
+  - {name: 🇯🇵 日本（东京阿里云） 7, server: 47.74.19.240, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
   
   - name: WARP
     type: wireguard
@@ -54,16 +54,16 @@ proxy-groups:
   - name: 负载均衡
     type: load-balance #负载均衡
     proxies:
-      - 🇦🇺 澳大利亚
       - 🇯🇵 日本（东京阿里云）
       - 🇯🇵 日本（东京阿里云） 2
       - 🇯🇵 日本（东京阿里云） 3
+      - 🇦🇺 澳大利亚
       - 🇯🇵 日本（东京阿里云） 4
       - 🇯🇵 日本（东京阿里云） 5
+      - 🇨🇳 中国（阿里云）
       - 🇯🇵 日本（东京阿里云） 6
       - 🇰🇷 韩国（首尔Oracle云计算数据中心）
       - 🇯🇵 日本（东京阿里云） 7
-      - 🇯🇵 日本
     url: 'http://www.gstatic.com/generate_204'
     interval: 300
     #lazy: true
@@ -73,16 +73,16 @@ proxy-groups:
   - name: 自动选择
     type: url-test #选出延迟最低的机场节点
     proxies:
-      - 🇦🇺 澳大利亚
       - 🇯🇵 日本（东京阿里云）
       - 🇯🇵 日本（东京阿里云） 2
       - 🇯🇵 日本（东京阿里云） 3
+      - 🇦🇺 澳大利亚
       - 🇯🇵 日本（东京阿里云） 4
       - 🇯🇵 日本（东京阿里云） 5
+      - 🇨🇳 中国（阿里云）
       - 🇯🇵 日本（东京阿里云） 6
       - 🇰🇷 韩国（首尔Oracle云计算数据中心）
       - 🇯🇵 日本（东京阿里云） 7
-      - 🇯🇵 日本
     url: "http://www.gstatic.com/generate_204"
     interval: 300
     tolerance: 50
@@ -90,16 +90,16 @@ proxy-groups:
   - name: 手动选择
     type: select #手动选择
     proxies:
-      - 🇦🇺 澳大利亚
       - 🇯🇵 日本（东京阿里云）
       - 🇯🇵 日本（东京阿里云） 2
       - 🇯🇵 日本（东京阿里云） 3
+      - 🇦🇺 澳大利亚
       - 🇯🇵 日本（东京阿里云） 4
       - 🇯🇵 日本（东京阿里云） 5
+      - 🇨🇳 中国（阿里云）
       - 🇯🇵 日本（东京阿里云） 6
       - 🇰🇷 韩国（首尔Oracle云计算数据中心）
       - 🇯🇵 日本（东京阿里云） 7
-      - 🇯🇵 日本
 
 rules:
     # 国内简单分流
