--- a/104.yaml
+++ b/104.yaml
@@ -27,13 +27,139 @@ proxies:
   - {name: 移动-3, server: 443.cf.bestl.de, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
   - {name: 移动-4, server: cfip.gay, port: 443, client-fingerprint: randomized, type: vless, uuid: 342ba7d2-fe2b-495c-b34d-29b71947791d, tls: true, tfo: false, servername: 0806.raindew.eu.org, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: 0806.raindew.eu.org}}}
   
-  - name: WARP
+  - name: WARP-美国-1
     type: wireguard
-    server: 188.114.98.5
-    port: 968
+    server: 162.159.195.31
+    port: 939
     ip: 172.16.0.2
-    ipv6: 2606:4700:110:8a8e:8d5:d628:cbe6:e0a3
-    private-key: mBI+MAoGgZFnufpljp9k9p74dbfF4bgR81mCctn6XUI=
+    ipv6: 2606:4700:110:87cb:1b24:34fb:ed7c:612e
+    private-key: oIqRhw9FpL6dj4kLaQrgz+kVMxy/gfiE+1ahnNdLq0g=
+    public-key: bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=
+    udp: true
+    reserved: [0,0,0]
+    remote-dns-resolve: true  
+    dns: [ 1.1.1.1, 8.8.8.8 ]
+    dialer-proxy: "节点选择"
+
+    - name: WARP-巴西-1
+    type: wireguard
+    server: 188.114.96.13
+    port: 4198
+    ip: 172.16.0.2
+    ipv6: 2606:4700:110:87cb:1b24:34fb:ed7c:612e
+    private-key: oIqRhw9FpL6dj4kLaQrgz+kVMxy/gfiE+1ahnNdLq0g=
+    public-key: bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=
+    udp: true
+    reserved: [0,0,0]
+    remote-dns-resolve: true  
+    dns: [ 1.1.1.1, 8.8.8.8 ]
+    dialer-proxy: "节点选择"
+
+    - name: WARP-美国-2
+    type: wireguard
+    server: 162.159.195.101
+    port: 894
+    ip: 172.16.0.2
+    ipv6: 2606:4700:110:87cb:1b24:34fb:ed7c:612e
+    private-key: oIqRhw9FpL6dj4kLaQrgz+kVMxy/gfiE+1ahnNdLq0g=
+    public-key: bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=
+    udp: true
+    reserved: [0,0,0]
+    remote-dns-resolve: true  
+    dns: [ 1.1.1.1, 8.8.8.8 ]
+    dialer-proxy: "节点选择"
+
+    - name: WARP-美国-3
+    type: wireguard
+    server: 162.159.195.21
+    port: 1701
+    ip: 172.16.0.2
+    ipv6: 2606:4700:110:87cb:1b24:34fb:ed7c:612e
+    private-key: oIqRhw9FpL6dj4kLaQrgz+kVMxy/gfiE+1ahnNdLq0g=
+    public-key: bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=
+    udp: true
+    reserved: [0,0,0]
+    remote-dns-resolve: true  
+    dns: [ 1.1.1.1, 8.8.8.8 ]
+    dialer-proxy: "节点选择"
+
+    - name: WARP-美国-4
+    type: wireguard
+    server: 162.159.195.91
+    port: 945
+    ip: 172.16.0.2
+    ipv6: 2606:4700:110:87cb:1b24:34fb:ed7c:612e
+    private-key: oIqRhw9FpL6dj4kLaQrgz+kVMxy/gfiE+1ahnNdLq0g=
+    public-key: bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=
+    udp: true
+    reserved: [0,0,0]
+    remote-dns-resolve: true  
+    dns: [ 1.1.1.1, 8.8.8.8 ]
+    dialer-proxy: "节点选择"
+
+    - name: WARP-美国-5
+    type: wireguard
+    server: 162.159.195.182
+    port: 2506
+    ip: 172.16.0.2
+    ipv6: 2606:4700:110:87cb:1b24:34fb:ed7c:612e
+    private-key: oIqRhw9FpL6dj4kLaQrgz+kVMxy/gfiE+1ahnNdLq0g=
+    public-key: bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=
+    udp: true
+    reserved: [0,0,0]
+    remote-dns-resolve: true  
+    dns: [ 1.1.1.1, 8.8.8.8 ]
+    dialer-proxy: "节点选择"
+
+    - name: WARP-巴西-2
+    type: wireguard
+    server: 188.114.96.58
+    port: 2371
+    ip: 172.16.0.2
+    ipv6: 2606:4700:110:87cb:1b24:34fb:ed7c:612e
+    private-key: oIqRhw9FpL6dj4kLaQrgz+kVMxy/gfiE+1ahnNdLq0g=
+    public-key: bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=
+    udp: true
+    reserved: [0,0,0]
+    remote-dns-resolve: true  
+    dns: [ 1.1.1.1, 8.8.8.8 ]
+    dialer-proxy: "节点选择"
+
+    - name: WARP-美国-6
+    type: wireguard
+    server: 162.159.192.242
+    port: 894
+    ip: 172.16.0.2
+    ipv6: 2606:4700:110:87cb:1b24:34fb:ed7c:612e
+    private-key: oIqRhw9FpL6dj4kLaQrgz+kVMxy/gfiE+1ahnNdLq0g=
+    public-key: bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=
+    udp: true
+    reserved: [0,0,0]
+    remote-dns-resolve: true  
+    dns: [ 1.1.1.1, 8.8.8.8 ]
+    dialer-proxy: "节点选择"
+
+    - name: WARP-美国-7
+    type: wireguard
+    server: 162.159.195.183
+    port: 7152
+    ip: 172.16.0.2
+    ipv6: 2606:4700:110:87cb:1b24:34fb:ed7c:612e
+    private-key: oIqRhw9FpL6dj4kLaQrgz+kVMxy/gfiE+1ahnNdLq0g=
+    public-key: bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=
+    udp: true
+    reserved: [0,0,0]
+    remote-dns-resolve: true  
+    dns: [ 1.1.1.1, 8.8.8.8 ]
+    dialer-proxy: "节点选择"
+
+    - name: WARP-巴西-3
+    type: wireguard
+    server: 188.114.97.205
+    port: 946
+    ip: 172.16.0.2
+    ipv6: 2606:4700:110:87cb:1b24:34fb:ed7c:612e
+    private-key: oIqRhw9FpL6dj4kLaQrgz+kVMxy/gfiE+1ahnNdLq0g=
     public-key: bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=
     udp: true
     reserved: [0,0,0]
@@ -46,9 +172,14 @@ proxy-groups:
     type: select
     proxies:
       - 负载均衡  #机场节点的负载均衡，下同
-      - 自动选择    
+      - 负载均衡-WARP
+      - 负载均衡-WORKERSW
+      - 自动选择 
+      - 自动选择-WARP
+      - 自动选择 
       - 手动选择
-      - WARP
+      - 手动选择-WARP
+      - 手动选择-WORKERSW
       - DIRECT
   - name: 负载均衡
     type: load-balance #负载均衡
@@ -62,6 +193,16 @@ proxy-groups:
       - 移动-2
       - 移动-3
       - 移动-4
+      - WARP-美国-1
+      - WARP-巴西-1
+      - WARP-美国-2
+      - WARP-美国-3
+      - WARP-美国-4
+      - WARP-美国-5
+      - WARP-巴西-2
+      - WARP-美国-6
+      - WARP-美国-7
+      - WARP-巴西-3
     url: 'http://www.gstatic.com/generate_204'
     interval: 300
     #lazy: true
@@ -80,11 +221,126 @@ proxy-groups:
       - 移动-2
       - 移动-3
       - 移动-4
+      - WARP-美国-1
+      - WARP-巴西-1
+      - WARP-美国-2
+      - WARP-美国-3
+      - WARP-美国-4
+      - WARP-美国-5
+      - WARP-巴西-2
+      - WARP-美国-6
+      - WARP-美国-7
+      - WARP-巴西-3
     url: "http://www.gstatic.com/generate_204"
     interval: 300
     tolerance: 50
 
   - name: 手动选择
+    type: select #手动选择
+    proxies:
+      - 电信联通-1
+      - 电信联通-2
+      - 电信联通-3
+      - 电信联通-4
+      - 电信联通-5
+      - 移动-1
+      - 移动-2
+      - 移动-3
+      - 移动-4
+      - WARP-美国-1
+      - WARP-巴西-1
+      - WARP-美国-2
+      - WARP-美国-3
+      - WARP-美国-4
+      - WARP-美国-5
+      - WARP-巴西-2
+      - WARP-美国-6
+      - WARP-美国-7
+      - WARP-巴西-3
+  - name: 负载均衡-WARP
+    type: load-balance #负载均衡
+    proxies:
+      - WARP-美国-1
+      - WARP-巴西-1
+      - WARP-美国-2
+      - WARP-美国-3
+      - WARP-美国-4
+      - WARP-美国-5
+      - WARP-巴西-2
+      - WARP-美国-6
+      - WARP-美国-7
+      - WARP-巴西-3
+    url: 'http://www.gstatic.com/generate_204'
+    interval: 300
+    #lazy: true
+    #disable-udp: true
+    strategy: round-robin #作为前置节点⽤这个⽐较好
+
+  - name: 自动选择-WARP
+    type: url-test #选出延迟最低的机场节点
+    proxies:
+      - WARP-美国-1
+      - WARP-巴西-1
+      - WARP-美国-2
+      - WARP-美国-3
+      - WARP-美国-4
+      - WARP-美国-5
+      - WARP-巴西-2
+      - WARP-美国-6
+      - WARP-美国-7
+      - WARP-巴西-3
+    url: "http://www.gstatic.com/generate_204"
+    interval: 300
+    tolerance: 50
+
+  - name: 手动选择-WARP
+    type: select #手动选择
+    proxies:
+      - WARP-美国-1
+      - WARP-巴西-1
+      - WARP-美国-2
+      - WARP-美国-3
+      - WARP-美国-4
+      - WARP-美国-5
+      - WARP-巴西-2
+      - WARP-美国-6
+      - WARP-美国-7
+      - WARP-巴西-3
+  - name: 负载均衡-WORKERSW
+    type: load-balance #负载均衡
+    proxies:
+      - 电信联通-1
+      - 电信联通-2
+      - 电信联通-3
+      - 电信联通-4
+      - 电信联通-5
+      - 移动-1
+      - 移动-2
+      - 移动-3
+      - 移动-4
+    url: 'http://www.gstatic.com/generate_204'
+    interval: 300
+    #lazy: true
+    #disable-udp: true
+    strategy: round-robin #作为前置节点⽤这个⽐较好
+
+  - name: 自动选择-WORKERSW
+    type: url-test #选出延迟最低的机场节点
+    proxies:
+      - 电信联通-1
+      - 电信联通-2
+      - 电信联通-3
+      - 电信联通-4
+      - 电信联通-5
+      - 移动-1
+      - 移动-2
+      - 移动-3
+      - 移动-4
+    url: "http://www.gstatic.com/generate_204"
+    interval: 300
+    tolerance: 50
+
+  - name: 手动选择-WORKERSW
     type: select #手动选择
     proxies:
       - 电信联通-1
